# sctp-test

./: Makefile.linux.in  Makefile.osx.in  README.md  configure  configure.in
sctp-test.xcodeproj/: project.pbxproj
sctp-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: sctp-test.c  sctp_config.h  stamp-h1
